--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.15.0"
+    "sequelize": "^6.15.0",
+    "@google-cloud/storage": "^5.19.4",
+    "firebase-admin": "^10.2.0"
   }
 }
